--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,11 +7,39 @@ body {
 }
 
 header {
+    .navbar-inverse {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
     height: 100vh;
     background-image: url(../images/header/aromatherapy-aromatic-beautiful-flowers-286755.jpg);
     background-attachment: fixed;
 	background-position: left top;
     background-size: cover;
+    main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        .slogan {            
+            color: $white;
+            background: rgba(153, 134, 134, 0.8);
+            text-align: center;
+            width:600px;
+            height: 300px;
+            border: 7px solid $white;
+            font-size: 20px;
+            h1 {
+                margin-top: 50px; 
+                line-height: 1.2;          
+                span {
+                    font-family: $main-font;
+                    font-weight: 300;              
+                    font-size: 40px;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
 
 }
 
