--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300i,400,900");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,800");
 body {
   margin: 0;
   padding: 0;
@@ -7,10 +8,12 @@ body {
 
 header {
   height: 100vh;
-  background-image: url(../images/header/aromatherapy-aromatic-beautiful-flowers-286755.jpg);
+  background-image: url(../images/header/bloom-blossom-flora-40797.jpg);
   background-attachment: fixed;
   background-position: left top;
   background-size: cover;
+  padding-top: 30vh;
+  position: relative;
 }
 
 header .navbar-inverse {
@@ -18,32 +21,49 @@ header .navbar-inverse {
 }
 
 header main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-header main .slogan {
-  color: #fff;
-  background: rgba(153, 134, 134, 0.8);
+  padding: 20px 15px;
+  background-color: rgba(255, 255, 255, 0.6);
   text-align: center;
-  width: 600px;
-  height: 300px;
-  border: 7px solid #fff;
-  font-size: 20px;
 }
 
-header main .slogan h1 {
-  margin-top: 50px;
-  line-height: 1.2;
+header main h1 {
+  text-transform: uppercase;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+  letter-spacing: 1;
+  color: #273c75;
 }
 
-header main .slogan h1 span {
-  font-family: Lato;
-  font-weight: 300;
+header main h2 {
+  font-family: 'Open Sans', sans-serif;
+  color: #192a56;
+}
+
+header .scroll-down {
+  position: absolute;
+  left: 49%;
+  animation: scroll-down-animate 2s linear infinite;
+}
+
+header .scroll-down span.glyphicon-chevron-down {
+  color: rgba(255, 255, 255, 0.8);
   font-size: 40px;
-  text-decoration: underline;
+}
+
+/*Animation for scroll-down icon - header section*/
+@keyframes scroll-down-animate {
+  0% {
+    transform: translateY(0);
+    opacity: 0;
+  }
+  80% {
+    transform: translateY(300%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(600%);
+    opacity: 0;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
