--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300i,400,900");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,800");
 body {
   margin: 0;
   padding: 0;
-  font-family: Lato, sans-serif;
 }
 
 header {
@@ -64,6 +62,24 @@ header .scroll-down span.glyphicon-chevron-down {
     transform: translateY(600%);
     opacity: 0;
   }
+}
+
+.about {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.about h2 {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 800;
+  font-size: 45px;
+  color: #8c7e7e;
+}
+
+.about p {
+  color: #8c7e7e;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
 }
 
 /*# sourceMappingURL=style.css.map */
