--- a/sass/_global_variables.scss
+++ b/sass/_global_variables.scss
@@ -1,6 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300i,400,900');
-
-$main-font: Lato;
-
 
 $white: #fff;
+$text-gray: #8c7e7e;
+
+
+
+@mixin heading-section {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 800;
+    font-size: 45px;
+    color: $text-gray;
+}
+
+@mixin text-section {
+    color: $text-gray;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
