--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    padding: 0;  
+    padding: 0;
 }
 
 header {
@@ -106,6 +106,50 @@ header {
     }
 
     
+}
+
+.projects {
+    padding: 10px;
+    text-align: center;
+    h2{
+        @include heading-section; 
+    }
+    .box-project {    
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;    
+        [class*="project"] {
+            width: 500px;
+            height: 500px;
+            margin: 10px;                       
+            box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.4);
+            position: relative;
+            overflow: auto;
+            img {
+                width: 100%;
+                height: auto;
+                border-bottom: 0.5px solid gray;
+            }
+            .details {
+                display: none;
+            }
+            .description {
+                background-color: #DBE2F1;
+                padding-top: 20px;
+                h4 {
+                    margin: 0;
+
+                }
+            }
+
+        }
+
+    }
+}
+
+.temoprary {
+    height: 500px;
 }
        
       
