--- a/css/style.css
+++ b/css/style.css
@@ -77,15 +77,6 @@ header .scroll-down span.glyphicon-chevron-down {
   padding: 0 60px 30px 60px;
 }
 
-.about .about-box .picture {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 1px solid black;
-  margin: 10px auto;
-  overflow: hidden;
-}
-
 .about .about-box h2 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 800;
@@ -98,10 +89,36 @@ header .scroll-down span.glyphicon-chevron-down {
   padding-right: 10px;
 }
 
-.about .about-box p {
+.about .about-box .picture {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin: -30px  auto 10px auto;
+  overflow: hidden;
+}
+
+.about .about-box .about-text {
+  max-width: 750px;
+  margin: 0 auto;
+}
+
+.about .about-box .about-text p {
   color: #192a56;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+}
+
+.about .about-box button {
+  width: 200px;
+  height: 50px;
+  border-radius: 25px;
+  background-color: #192a56;
+  border: none;
+  outline: none;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 10px;
 }
 
 .technology {
