--- a/sass/_global_variables.scss
+++ b/sass/_global_variables.scss
@@ -17,3 +17,17 @@ $heading-color: #273c75;
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
 }
+
+@mixin btn_big {
+    width: 200px;
+    height: 50px;
+    border-radius: 25px;
+    background-color: $text-color;
+    border: none;
+    outline: none;
+    color: $white;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 10px;
+
+}
