--- a/css/style.css
+++ b/css/style.css
@@ -219,11 +219,10 @@ header .scroll-down span.glyphicon-chevron-down {
 
 .projects .box-project [class*="project"] {
   width: 500px;
-  height: 361px;
+  height: auto;
   margin: 10px;
   box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.4);
   position: relative;
-  overflow: auto;
   overflow: hidden;
 }
 
@@ -264,14 +263,18 @@ header .scroll-down span.glyphicon-chevron-down {
 }
 
 .projects .box-project [class*="project"] .description i {
-  font-size: 50px;
+  font-size: 30px;
   color: #273c75;
 }
 
 .projects .box-project [class*="project"] a .icon-link {
   width: 100px;
-  font-size: 30px;
+  font-size: 20px;
   margin: 20px 40px;
+}
+
+.projects .box-project .more-description {
+  height: auto;
 }
 
 .temoprary {
