--- a/sass/style.scss
+++ b/sass/style.scss
@@ -174,11 +174,11 @@ header {
         flex-wrap: wrap;    
         [class*="project"] {
             width: 500px;
-            height: 361px;        
+            height: auto;
+            //height: 361px;        
             margin: 10px;                       
             box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.4);
-            position: relative;
-            overflow: auto;
+            position: relative;            
             overflow: hidden;
             img {
                 width: 90%;                
@@ -189,6 +189,7 @@ header {
             button {
                 @include btn-big;
                 margin-bottom: 20px;
+                
             }
             .description {                
                 padding-top: 20px;
@@ -199,17 +200,18 @@ header {
                     margin-bottom: 10px;                  
                 }
                 i {
-                    font-size: 50px;
+                    font-size: 30px;
                     color: $heading-color;
-                }
-                
+                }                
             }
             a .icon-link {
                 width: 100px;
-                font-size: 30px;
+                font-size: 20px;
                 margin: 20px 40px;
             }
-
+        }
+        .more-description {
+            height: auto;
         }
 
     }
