--- a/sass/style.scss
+++ b/sass/style.scss
@@ -217,6 +217,57 @@ header {
     }
 }
 
+.contact {
+    background-color: $text-color;
+    color: $white;
+    height: 400px;
+    .contact-box {
+        margin: 80px auto;
+        width: 90%;
+        border: 3px solid $white;
+        text-align: center;
+        padding-bottom: 30px;
+        h2 {
+            @include heading-section;
+            color: $white; 
+            background-color: $text-color;
+            display: inline-block;
+            transform: translateY(-50px);
+            padding-left: 10px;
+            padding-right: 10px;       
+        }  
+        p {
+            font-family: 'Open Sans' sans-serif;
+            font-size: 25px;
+        }
+        a {
+            color: $white;
+            button {
+                background: none;
+                outline: none;
+                border: none;
+                .fa {
+                    font-size: 25px;
+                }    
+            }   
+        }
+       
+    } 
+ 
+        
+
+}
+footer {
+    background-color: #26292D;
+    color: #868C95;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    p {
+        margin: 0;
+    }
+}
+
 .temoprary {
     height: 500px;
 }
