--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,10 @@ body {
     padding: 0;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 header {
     height: 100vh;
     background-image: url(../images/header/bloom-blossom-flora-40797.jpg);
@@ -122,7 +126,7 @@ header {
             justify-content: center;
             align-items: center;
             width: 100px;
-            margin: 15npx;
+            margin: 15px;
             &:hover {
                 transform: scale(1.2);
             }
@@ -226,8 +230,7 @@ header {
 
 .contact {
     background-color: $text-color;
-    color: $white;
-    height: 400px;
+    color: $white;    
     .contact-box {
         margin: 80px auto;
         width: 90%;
@@ -241,7 +244,9 @@ header {
             display: inline-block;
             transform: translateY(-50px);
             padding-left: 10px;
-            padding-right: 10px;       
+            padding-right: 10px;  
+            margin-left: 30px;
+            margin-right: 30px;     
         }  
         p {
             font-family: 'Open Sans' sans-serif;
