--- a/sass/style.scss
+++ b/sass/style.scss
@@ -282,6 +282,14 @@ footer {
 
 
 @media (max-width: 767px) {
+    .about {
+        .about-box {
+            padding: 0 20px 30px 20px;
+            p {
+            text-align: justify;
+            }
+        }
+    }
    footer {   
      font-size: smaller;
      p {
