--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,7 +40,7 @@ header {
     }
     .scroll-down {
         position: absolute;       
-        left: 49%;
+        left: 47vw;
         animation: scroll-down-animate 2s linear infinite;  
         span.glyphicon-chevron-down {
         color: rgba(255, 255, 255, 0.8);
