Add incons in contact section

--- a/css/style.css
+++ b/css/style.css
@@ -150,25 +150,18 @@ header .scroll-down span.glyphicon-chevron-down {
 }
 
 .technology .box-logo-1 {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
   padding-top: 50px;
   padding-bottom: 30px;
 }
 
 .technology .box-logo-1 [class*="box"] {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
+  justify-content: center;
+  align-items: center;
   width: 100px;
   margin: 15px;
   opacity: 0;
@@ -195,25 +188,18 @@ header .scroll-down span.glyphicon-chevron-down {
 }
 
 .technology .box-logo-2 {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
   padding-top: 50px;
   padding-bottom: 30px;
 }
 
 .technology .box-logo-2 [class*="box"] {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center;
+  justify-content: center;
+  align-items: center;
   margin: 0 30px;
 }
 
@@ -239,14 +225,10 @@ header .scroll-down span.glyphicon-chevron-down {
 }
 
 .projects .box-project {
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: row;
-      flex-direction: row;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .projects .box-project [class*="project"] {
@@ -353,13 +335,14 @@ header .scroll-down span.glyphicon-chevron-down {
 }
 
 .contact .contact-box a button {
+  margin-top: 10px;
   background: none;
   outline: none;
   border: none;
 }
 
 .contact .contact-box a button .fa {
-  font-size: 25px;
+  font-size: 30px;
 }
 
 footer {
@@ -390,4 +373,5 @@ footer p {
     margin: 10px 40px;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
