--- a/sass/style.scss
+++ b/sass/style.scss
@@ -264,11 +264,12 @@ header {
         a {
             color: $white;
             button {
+                margin-top: 10px;
                 background: none;
                 outline: none;
                 border: none;
                 .fa {
-                    font-size: 25px;
+                    font-size: 30px;
                 }    
             }   
         }
