--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,21 @@ header {
     .navbar-inverse {
         background-color: rgba(0, 0, 0, 0.8);
     }
+    .change-language {
+        position: fixed;
+        top: 12px;
+        right: 60px;
+        display: block;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        color: $white;
+        font-weight: bold;
+        text-align: center;
+        text-decoration: none;
+        padding-top: 4px;
+        z-index: 10000;
+    }
     main {  
         padding: 20px 15px;
         background-color: rgba(255, 255, 255, 0.6);
